fixing logo + display none on indications press when on tablet/mobile mode

--- a/src/components/App/index.scss
+++ b/src/components/App/index.scss
@@ -110,6 +110,10 @@
     height: 130px;
     border-radius: 25px;
    }
+
+  .keypress {
+    display: none;
+  }
  }
 
  @media (max-width: 500px) {
